--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "masonry-layout": "^4.2.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
